--- a/_layouts/base-home.html
+++ b/_layouts/base-home.html
@@ -3,6 +3,7 @@ layout: compress
 ---
 <!DOCTYPE html>
 <html lang="en-us">
+
   {% include head.html %}
   <body class="overflow_hidden">
 
@@ -102,7 +103,7 @@ layout: compress
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.min.js"></script>
-  {% js just %}
-  {% js typed.min %}
-  {% js typer %}
+  <!-- {% js just %} -->
+  <!--{% js typed.min %} -->
+  <!--{% js typer %} -->
 </html>
