--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -98,5 +98,5 @@ layout: compress
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.9.gem 0/js/lightbox.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/cash/1.3.0/cash.min.js"></script>
-  {% js just %}
+  <!-- {% js just %}-->
 </html>
