--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,7 +27,7 @@
   <!-- end analytics -- >
 
   <!-- CSS -->
-  {% css base %}
+  <link rel="shortcut icon" href="{{ site.baseurl }}/public/css/site.scss">
 
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/public/apple-touch-icon-precomposed.png">
