--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,8 +27,7 @@
   <!-- end analytics -- >
 
   <!-- CSS -->
-  <link rel="shortcut icon" href="{{ site.baseurl }}/public/css/site.scss">
-
+  <link type="text/css" rel="stylesheet" href="/assets/base.css">
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/public/apple-touch-icon-precomposed.png">
   <link rel="shortcut icon" href="{{ site.baseurl }}/public/favicon.ico">
