--- a/public/css/_font-awesome.scss
+++ b/public/css/_font-awesome.scss
@@ -3,16 +3,16 @@
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
  */
 
-@import "font-awesome/variables";
-@import "font-awesome/mixins";
-@import "font-awesome/path";
-@import "font-awesome/core";
-@import "font-awesome/larger";
-@import "font-awesome/fixed-width";
-@import "font-awesome/list";
-@import "font-awesome/bordered-pulled";
-@import "font-awesome/animated";
-@import "font-awesome/rotated-flipped";
-@import "font-awesome/stacked";
-@import "font-awesome/icons";
-@import "font-awesome/screen-reader";
+@import "../fonts/variables";
+@import "../fonts/mixins";
+@import "../fonts/path";
+@import "../fonts/core";
+@import "../fonts/larger";
+@import "../fonts/fixed-width";
+@import "../fonts/list";
+@import "../fonts/bordered-pulled";
+@import "../fonts/animated";
+@import "../fonts/rotated-flipped";
+@import "../fonts/stacked";
+@import "../fonts/icons";
+@import "../fonts/screen-reader";
