--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,7 +27,8 @@
   <!-- end analytics -- >
 
   <!-- CSS -->
-  <link type="text/css" rel="stylesheet" href="/assets/base.css">
+  <link rel="stylesheet/scss" type="text/css" href="{{site.baseurl}}/public/base.scss">
+  <link rel="stylesheet/scss" type="text/css" href="{{site.baseurl}}/public/main.sass">
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/public/apple-touch-icon-precomposed.png">
   <link rel="shortcut icon" href="{{ site.baseurl }}/public/favicon.ico">
