--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,8 +27,11 @@
   <!-- end analytics -- >
 
   <!-- CSS -->
-  <link rel="stylesheet/scss" type="text/css" href="{{site.baseurl}}/public/base.scss">
-  <link rel="stylesheet/scss" type="text/css" href="{{site.baseurl}}/public/main.sass">
+  <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/public/css/poole.css">
+  <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/public/css/lanyon.css">
+  <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/public/css/syntax.css">
+  <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/public/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/public/css/custom.css">
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/public/apple-touch-icon-precomposed.png">
   <link rel="shortcut icon" href="{{ site.baseurl }}/public/favicon.ico">
