--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,6 +32,8 @@
   <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/public/css/syntax.css">
   <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/public/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/public/css/custom.css">
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.9.0/css/lightbox.min.css">
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/public/apple-touch-icon-precomposed.png">
   <link rel="shortcut icon" href="{{ site.baseurl }}/public/favicon.ico">
