--- a/_layouts/base-home.html
+++ b/_layouts/base-home.html
@@ -12,7 +12,7 @@ layout: compress
     <div class="col animated bounceInDown" id="progress_bar">
       <div id="progressbar">
         <span id="loading"></span>
-        <div id="load">Kadir is thinking...</div>
+       <div id="load"><span id="load_content" style="font-size: 15px"></span></div>
       </div>
     </div>
     <div class="wrap">
