--- a/_layouts/base-home.html
+++ b/_layouts/base-home.html
@@ -30,11 +30,11 @@ layout: compress
           <canvas id="skills_chart"></canvas>
           <div id="window-buttons" class="row col-xl-12 col-lg-12 col-md-12 col-sm-12">
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-6">
-            <a id="software-button" class="btn btn--stripe"><i class="fa fa-wrench"></i> Data Science</a>
+              <a id="programming-button" class="btn btn--stripe"><i class="fa fa-terminal"></i> Software Development</a>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-6">
-            <a id="programming-button" class="btn btn--stripe"><i class="fa fa-terminal"></i> Programming</a>
-          </div>
+            <a id="software-button" class="btn btn--stripe"><i class="fa fa-wrench"></i> Data Science</a>
+            </div>
           </div>
         </div>
       </div>
